--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tabski-organization/tabski-utils": "^1.0.51-rc.1",
+    "@tabski-organization/tabski-utils": "^1.0.55",
     "@tailwindcss/vite": "^4.1.8",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
