--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "vercel-build": "node scripts/generate-npmrc.js && npm run build && rm .npmrc",
+    "vercel-build": "node scripts/generate-npmrc.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
